--- a/notebooks/class1.ipynb
+++ b/notebooks/class1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3b3f741e779a58db76a8ab95020902c80403edfb42b67f6560394e6da0591c16"
+  "signature": "sha256:f2fab35346dbaf5df8253b48bfea430d8bbb880214b5e45d03935b681a102e1c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2513,10 +2513,9 @@
      "source": [
       "Classwork\n",
       "===========\n",
-      "1. Compute the start and end stats for the Yellow River\n",
-      "2. Compute the start and end stats for the Pearl\n",
-      "3. Compare the stats for all three rivers. Are they expected?\n",
-      "4. Now redo all the analysis using NDVI instead of flood severity. What changes? How are the rivers similar and different?"
+      "1. Compute the stats for 1990 and 2013 for the Yellow River\n",
+      "2. Compute the start for 1990 and 2013 for the Yangtze River\n",
+      "3. Now redo all the analysis using NDVI instead of flood severity. What changes? How are the rivers similar and different?"
      ]
     },
     {
