friday notes and class two

--- a/notebooks/Friday.ipynb
+++ b/notebooks/Friday.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:df99721d8157e835004886d3e839671559b9066fbe0b5fa1bd62ce0cb4e13227"
+  "signature": "sha256:ea694c77e9e1c5c9ca0e8077b557312fa9f7c1b8898ac23bdeec8ca3a5ca8c76"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -479,9 +479,9 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 16,
+       "prompt_number": 17,
        "text": [
-        "<matplotlib.text.Text at 0xa611278>"
+        "<matplotlib.text.Text at 0xa86e080>"
        ]
       },
       {
@@ -489,11 +489,121 @@
        "output_type": "display_data",
        "png": "iVBORw0KGgoAAAANSUhEUgAAAXsAAAEPCAYAAACjjWTcAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD6dJREFUeJzt3X+QVeV9x/E3LAssS1lHKaBlKWtchUREJRqTyHg10gR/\nxekkKjHR4NjOJDqatLVq0477Rzup6SS2Y7G1Wh2swbQlxtGEdBKb3Jpq609YBWQRhCKbUVKsywIa\nZHf7x3OWvcDueu/u3vvc3ef9mrlzzzn7zO6XA/u5D88553lAkiRJkiRJkiRJkiRJkiRJVeAB4C3g\nlYJjxwI/BTYDPwGOiVCXJCVnfBm/94PAZ444dhsh7E8G/j3blySNcnM5vGe/CZiZbc/K9iVJZVbO\nnn1/ZhKGdsjeZw7SVpI0Qiod9oV6spckqcwmVPjnvUUYvnkTOB7Y1V+jhQsX9rS2tlayLkkaC1qB\n0/v7QqV79o8D12bb1wKP9deotbWVnp6e6K877rgjeg3V8vJceB48F9V/LoCFA4VvOcP+EeAZ4BTg\nDWA58JfAEsKtlxdk+5KkMivnMM6yAY5fWMafKUnqR8wLtFUvl8vFLqFqeC4Cz0Mfz0Wf0XAuxsUu\nYAA92fiTJKlI48aNgwFy3Z69JCXAsJekBBj2kpQAw16SEmDYS1ICDHtJSoBhL0kJMOwlKQGGvSQl\nwLCXpAQY9pKUAMNekhJg2EtSAgx7SRqi7du3s3Tp5znllLO57rob6OzsjF3SgJziWJKGoKOjg5NP\nPp3du6+nq+sCJk36O846axdPPfXj3qmGK26wKY4rveC4JI0JTz/9NO+910RX1zcA+PWvz+K556az\ne/dupk+fHrm6ozmMI0lDMHHiRHp69gK9oxDv0tNzkNra2phlDciwl6QhWLx4MXPmjGPSpGuAf2TK\nlIu46qov0NDQELu0fjlmL0lD1NnZyTe/+Ve89toOzj33o9x441eoqamJVs9gY/aGvSSNEa5BK0mJ\nM+wlKQGGvSQlwLCXpAQY9pKUAMNekhJg2EtSAgx7SUqAYS9JCTDsJSkBhr0kJcCwl6QEGPaSlADD\nXpISECvsbwc2AK8Aq4BJkeqQpCTECPu5wO8BZwILgBrgqgh1SFIyYiw4vgd4H5gCdGXv7RHqkKRk\nxOjZvw18G9gB/BJ4B3gyQh2SlIwYPfsPAV8jDOd0AP8KXA18t7BRS0vLoe1cLkcul6tUfZI0KuTz\nefL5fFFtY6xBeyWwBLg+2/8ScA5wQ0Eb16CVpBJV2xq0mwjhXkco6kJgY4Q6JCkZMcK+FXgIeAF4\nOTv2DxHqkKRkxBjGKYbDOJJUomobxpEkVZhhL0kJMOwlKQGGvSQlwLCXpAQY9pKUAMNekhJg2EtS\nAgx7SUqAYS9JCTDsJSkBhr0kJcCwl6QEGPaSlADDXlLJOjs72bx5M++++27sUlQkw15SSVat+h4z\nZjSyaNFSZs787aLXQFVcLl4iqWg7duxg/vxF7N//M2AB8CTTpl3NW2/9D5MnT45dXvJcvETSiNi0\naRO1tacRgh7gQrq6prBz586YZakIhr2kojU1NXHgwHqgPTvSSnf3O8yaNStmWSqCYS+paM3NzbS0\n3EZd3Rk0NJxPXd2neOCBe5k6dWrs0vQBHLOXVLItW7awfft25s2bx+zZs2OXo8xgY/aGvSSNEV6g\nlaTEGfaSlADDXpISYNhLUgIMe0lKgGEvSQkw7CUpAYa9JCXAsJekBBj2kpQAw16SEmDYS1ICDHtJ\nSkCssD8GWA28CmwEzolUhyQlYUKkn/s3wBrgc1kN9ZHqkKQkxJjPvgFYC5w4SBvns5ekElXbfPZN\nwK+AB4GXgPuAKRHqkKRkxAj7CcCZwD3Z+z7gtgh1SFIyYozZ78xez2f7q+kn7FtaWg5t53I5crlc\nBUqTpNEjn8+Tz+eLahtrDdqngOuBzUALUAfcWvB1x+wlqUTVuOD4QuB+YCKwFVgOdBR83bCXpBJV\nY9h/EMNekkpUbXfjSJIqzLCXpAQY9pKUAMNekhJg2EtSAgx7SUqAYS9JCTDsJSkBxYT9ScDkbPt8\n4CbC4iOSpFGimLD/PnCQEPr3Ao3AqnIWJUkaWcWEfTch7H8XuBu4BTi+nEVJkkZWMWF/APgCcA3w\nw+xYbdkqkiSNuGLC/jrg48BfANsIywk+XM6iJEkjy1kvJWmMGGzWy8FWqnqlYLvniG/QA5w27Mok\nSRUxWNhfmr1/NXv/J0LgX13WiqQq1N3dzapVq2hr28ypp36EK664orcXJY0KxfxrXQecfsSxtcAZ\nI1/OIQ7jqGr09PRw5ZVfZs2aNvbt+zT19U+wbNknue++u2OXJh1muCtVtQI3AP+Z7X8SWMHRHwAj\nybBX1diwYQNnn/1p9u9/jbBc8h4mTz6RzZvX0tjYGLs86ZChjtn3ug54EGjI9t8hrBkrJWHPnj1M\nmDCLEPQA06itnU5HR4dhr1GjmLB/kXAx9hjChdmOwZtLY8uCBQuYNOl/GTduBT09lzN+/CoaGnpo\nbm6OXZpUtMGGcf6wYLu/MZXvjHAthRzGUVVpa2tj2bLfZ+vWNubPP5VHHrmPpqam2GVJhxnqmH0L\nIeRPAc4CHs/aXwI8B3xxJIs8gmEvSSUa7gXaXwAXAZ3Z/m8Aa4DFI1HcAAx7SSrRYGFfzHQJM4D3\nC/bfz45JkkaJYi7QPkQYtnmU8IlxObCynEVJkkZWsY8AnglcnG3/CHipPOUc4jCOJJVouMM4NxN6\n97XAREKv/qaRKk6SVH7F9OxfAc4B9mX79cB/AwvKVRT27CWpZMPt2UNYraq/bUnSKFDMBdoHgWc5\n/ALtA+UsSpI0soq9QLsIOJfwkNUvCLNelpPDOJJUouE+VBWDYS9JJRqJMXtJ0ihm2EtSAgx7SUqA\nYS9JCYgZ9jWEu3qeiFiDJCUhZtjfDGyk/4VRJEkjKFbYzybMkX8/1Xv7pySNGbHC/i7gFpx6QZIq\nIkbYXwLsIozX26uXpAooZm6ckfYJ4DLCMM5kYBphCuVrChu1tLQc2s7lcuRyuYoVKEmjQT6fJ5/P\nF9U2ds/6POCPgEuPOO50CZJUomqfLsFUl6Qyi92zH4g9e0kqUbX37CVJZWbYS1ICDHtJSoBhL0kJ\nMOwlKQGGvSQlwLCXpAQY9pKUAMNekhJg2EtSAgx7SUqAYS9JCTDsJSkBhr0kJcCwl6QEGPYa0Btv\nvMH551/KjBknsnjxUrZt2xa7JElD5OIl6teBAwdobj6d9vZldHVdxfjxjzJr1v1s2fIydXV1scuT\n1A8XL1HJ2traePvtbrq6/gxoprv7VvburWf9+vWxS5M0BIa9+lVfX8/Bg/8H7M+OvMfBg7uZOnVq\nzLIkDZFhr341NTVx2WUXUV+/BLiTKVN+hyVLFjNv3rzYpUkaAsfsNaDu7m5WrlzJunUbWLBgHsuX\nL6empiZ2WZIGMNiYvWEvSWOEF2glKXGGvSQlwLCXpAQY9pKUAMNekhJg2EtSAgx7SUqAYS9JCTDs\nJSkBhr0kJcCwl6QEGPaSlADDXpISYNhLUgJihH0j8HNgA7AeuClCDZKUlBjz2c/KXuuAqcCLwOXA\nqwVtnM9ekkpUbfPZv0kIeoC9hJA/IUIdkpSM2GP2c4EzgGcj1yFJY9qEiD97KrAauJnQwz9MS0vL\noe1cLkcul6tUXZI0KuTzefL5fFFtY61BWwv8EPgx8Nf9fN0xe0kqUbUtOD4OWAnsBr4+QBvDXpJK\nVG1hfy7wFPAy0JvotwP/VtDGsJekElVb2BfDsJekElXbrZeSpAoz7CUpAYa9JCXAsJekBBj2kpQA\nw16SEmDYS1ICDHtJSoBhL0kJMOwlKQGGvSQlwLCXpAQY9pKUAMNekhJg2Pdj165dPPPMM7S3t8cu\nRZJGhGF/hB/84DGamj7M0qVf56STTmPFintjlyRJw+biJQX27t3LzJlz2L//p8Ai4HXq6j7Gxo3P\nM3fu3IrXI0mlcPGSIrW3tzN+/LGEoAc4kYkTP8LWrVtjliVJw2bYF5g9ezY9Pe8AT2dHNnHgwHqa\nm5tjliVJw2bYF6ivr2f16oepr/8s06YtYPLkj7NixXeYM2dO7NIkaVgcs+9HR0cH27Zto7GxkeOO\nOy5aHZJUisHG7A17SRojvEArSYkz7CUpAYa9JCXAsJekBBj2kpQAw16SEmDYS1ICDHtJSoBhL0kJ\nMOwlKQGGvSQlwLCXpAQY9pKUgFhh/xlgE/AacGukGiQpGTHCvgb4W0LgfxhYBsyPUMcHyufzsUuo\nGp6LwPPQx3PRZzScixhhfzawBdgOvA98D/hshDo+0Gj4C6wUz0XgeejjuegzGs5FjLD/LeCNgv2d\n2TFJUpnECHuXoJKkCouxLOE5QAthzB7gdqAbuLOgzTpgYWXLkqRRrxU4PXYRvSYAW4G5wERCsFfl\nBVpJ0vAsBdoIF2pvj1yLJEmSpLHKh76CRuDnwAZgPXBT3HKqQg2wFngidiGRHQOsBl4FNhKuxaXq\ndsLvyCvAKmBS3HJUrBrC8NJcoJa0rynMou9iz1TC0Fuq56LXHwDfBR6PXUhkK4Hrsu0JQEPEWmKa\nC7xOX8D/M3BttGoG4dw4Rxs1D31VwJuEDzuAvYRe3AnxyoluNnARcD9x7mSrFg3AYuCBbP8g0BGv\nnKj2EHJiCuFDbwrQHrWiARj2R/Ohr/7NBc4Ano1cR0x3AbcQbhVOWRPwK+BB4CXgPkLIpeht4NvA\nDuCXwDvAk1ErGoBhfzQf+jraVML47M2EHn6KLgF2EcbrU+7VQ+jBngnck73vA26LWlE8HwK+RugM\nnUD4Xbk6ZkEDMeyP1k64MNmrkdC7T1Ut8H3gYeCxyLXE9AngMmAb8AhwAfBQ1Iri2Zm9ns/2VxNC\nP0UfBZ4BdhOGsx4l/FvRKOBDX33GEQLtrtiFVJnz8G6cp4CTs+0WDn8CPiULCXeq1RF+X1YCN0St\nSCXxoa/gXML49DrC8MVa+qa5SNl5eDfOQkLPvpXQm031bhyAP6bv1suVhP8NS5IkSZIkSZIkSZIk\nSZIkSZIkSZIkxfFFwiyea4G/B74KfKvg618G7h6gbe+8UnuBPyc8ZfxfwIzs+OcJT1SuA/6jXH8A\nSdLg5hOmPKjJ9lcA1xBWJ+u1hjCp1ZFt7wG+lG13Axdn23cC38i2XwaOz7anjXDtUskmxC5AiuRT\nwCLghWx/MmEK49eBjxHmRZpHmNHwxiPa1hEWdgE4APwo234RWJJtP02YJ+VfCHPHSFEZ9krZSuBP\njji2HLiCsAbxox/QFsIqRb266fud+gph1bOLCR8CiwgLXUiSKmg+sBn4zWz/WGAOYSHtrcDPCHOV\nD9YWoLPge36OsHoThEUtej0HnDaCtUsls2evVL0K/CnwE8LF1vcJF2h3ABsJAf9CEW0LVzbrKdj/\nFtBMmOP8ScIYviRJkiRJkiRJkiRJkiRJkiRJkiRJqoT/B0vXCi5mVgi5AAAAAElFTkSuQmCC\n",
        "text": [
-        "<matplotlib.figure.Figure at 0xa3c95c0>"
+        "<matplotlib.figure.Figure at 0xa623d68>"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#documentation/usage\n",
+      "ax.scatter?"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 20
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#source code\n",
+      "ax.scatter??"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 21
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "np.vstack((a,b))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 22,
+       "text": [
+        "array([[0, 2, 4, 6, 8],\n",
+        "       [1, 3, 5, 7, 9]])"
+       ]
+      }
+     ],
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "np.hstack((a,b))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 23,
+       "text": [
+        "array([0, 2, 4, 6, 8, 1, 3, 5, 7, 9])"
+       ]
+      }
+     ],
+     "prompt_number": 23
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "np.dstack((a,b))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 24,
+       "text": [
+        "array([[[0, 1],\n",
+        "        [2, 3],\n",
+        "        [4, 5],\n",
+        "        [6, 7],\n",
+        "        [8, 9]]])"
+       ]
+      }
+     ],
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#list comprehensions\n",
+      "[i for i in range(5)]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 25,
+       "text": [
+        "[0, 1, 2, 3, 4]"
+       ]
+      }
+     ],
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
