--- a/notebooks/Monday.ipynb
+++ b/notebooks/Monday.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:46e26c722166c0b4024fd4d8db691f9d3bd1a994b895528a2dc8e698458a1a0c"
+  "signature": "sha256:47a484479c805d4f7e8e5d3726246ae7db65fd392e01260872b18b6047ab78f9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -134,10 +134,63 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "for i in range(10):\n",
+      "    print i + 2"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "2\n",
+        "3\n",
+        "4\n",
+        "5\n",
+        "6\n",
+        "7\n",
+        "8\n",
+        "9\n",
+        "10\n",
+        "11\n"
+       ]
+      }
+     ],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "breakfast = [\"bagel\", \"muffin\", \"potatoes\", \"nothing\", \n",
+      "             \"cereal\"]\n",
+      "for food in breakfast:\n",
+      "    print food\n",
+      "    print \"I ate {}\".format(food)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "bagel\n",
+        "I ate bagel\n",
+        "muffin\n",
+        "I ate muffin\n",
+        "potatoes\n",
+        "I ate potatoes\n",
+        "nothing\n",
+        "I ate nothing\n",
+        "cereal\n",
+        "I ate cereal\n"
+       ]
+      }
+     ],
+     "prompt_number": 20
     }
    ],
    "metadata": {}
