indexing and corrcoef

--- a/notebooks/Monday.ipynb
+++ b/notebooks/Monday.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:47a484479c805d4f7e8e5d3726246ae7db65fd392e01260872b18b6047ab78f9"
+  "signature": "sha256:9cefb837604fe497ece2a367fff90d0d9d4b18c8e9a405868a4d5125b6d75375"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -190,7 +190,142 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = np.arange(10)\n",
+      "b = a+10\n",
+      "print a \n",
+      "print b\n",
+      "print zip(a,b)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[0 1 2 3 4 5 6 7 8 9]\n",
+        "[10 11 12 13 14 15 16 17 18 19]\n",
+        "[(0, 10), (1, 11), (2, 12), (3, 13), (4, 14), (5, 15), (6, 16), (7, 17), (8, 18), (9, 19)]\n"
+       ]
+      }
+     ],
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for num in range(10):\n",
+      "    if num>5:\n",
+      "        print num, \"hello\""
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "6 hello\n",
+        "7 hello\n",
+        "8 hello\n",
+        "9 hello\n"
+       ]
+      }
+     ],
+     "prompt_number": 30
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "b"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 25,
+       "text": [
+        "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19])"
+       ]
+      }
+     ],
+     "prompt_number": 25
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = np.empty((4,4))\n",
+      "for i in range(4):\n",
+      "    a[i]=i\n",
+      "    \n",
+      "print a\n",
+      "# all rows, 1 column\n",
+      "print a[:,1]\n",
+      "# all columns, 1 row\n",
+      "print a[1,:]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[ 0.  0.  0.  0.]\n",
+        " [ 1.  1.  1.  1.]\n",
+        " [ 2.  2.  2.  2.]\n",
+        " [ 3.  3.  3.  3.]]\n",
+        "[ 0.  1.  2.  3.]\n",
+        "[ 1.  1.  1.  1.]\n"
+       ]
+      }
+     ],
+     "prompt_number": 38
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mask = np.array([True, False, True, False])\n",
+      "print \"row: \", a[mask,:]\n",
+      "print \"col: \", a[:,mask]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "row:  [[ 0.  0.  0.  0.]\n",
+        " [ 2.  2.  2.  2.]]\n",
+        "col:  [[ 0.  0.]\n",
+        " [ 1.  1.]\n",
+        " [ 2.  2.]\n",
+        " [ 3.  3.]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 42
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
