added picture of map coordinates

--- a/notebooks/class4.ipynb
+++ b/notebooks/class4.ipynb
@@ -1,13 +1,21 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a88b0687de05a71fa7ba4a31983c3324d38106db1c2e4f1c3312aaa96d22fbeb"
+  "signature": "sha256:5b53f723a70c6ffdd302badcb1ed8a4f9248659ae12604f00444e8b27c48bc91"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -379,8 +387,21 @@
       "6. Compute and plot the best fit line (linear regression)\n",
       "7. Pick any three rivers in the same region* (except ones already covered in class) and repeat steps 1-6\n",
       "    *region = country or continent in the case of Europe\n",
-      "8. Are there any region level patterns?\n",
-      "    \n"
+      "\n",
+      "Report\n",
+      "=======\n",
+      "Describe and compare any region level patterns and similarities between rivers in the same region and rivers across regions.\n",
+      "\n",
+      "Extra Credit\n",
+      "==============\n",
+      "Compute the correlations by month (only January data, only February....only December) and report on how that changes the results of the project. Do some months do better? Worse? Do some pairs do better in January and others better in June?\n",
+      "\n",
+      "Hint:\n",
+      "\n",
+      "df = data[var][river]\n",
+      "\n",
+      "df[df.index.month==01]\n",
+      "\n"
      ]
     },
     {
