updated project instructions

--- a/notebooks/class4.ipynb
+++ b/notebooks/class4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1851fa04712109f5dc7f7dff4de5f05822c2d4222012938f86563e5e55be8294"
+  "signature": "sha256:4d74783d90c5db955db65e1d8b6058ad4fa07a187e0aa24556c54149a06ca527"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -452,15 +452,14 @@
       "3. Plot the river deltas' time series \n",
       "        a timeseries is just a plot of time vs. data\n",
       "        it's the df[var][river].plot()\n",
-      "4. Compute the (pairwise) correlations between the deltas. \n",
+      "4. Compute the (pairwise pearsonr) correlations between the deltas. \n",
       "5. Plot the deltas against each other (scatter plot) \n",
       "6. Compute and plot the best fit line (linear regression)\n",
       "7. Pick any three rivers in the same region* (except ones already covered in class) and repeat steps 1-6\n",
-      "        region = country or continent in the case of Europe\n",
       "\n",
       "Report\n",
       "=======\n",
-      "Describe and compare any region level patterns and similarities between rivers in the same region and rivers across regions.\n",
+      "Describe and compare any region level patterns and similarities between rivers in the same region and rivers across regions. Use the (Pearl, Yellow, Yangtze) and (Colorado, Mississippi) pairs, as well as the 3 rivers you chose.\n",
       "\n",
       "Extra Credit\n",
       "==============\n",
@@ -473,6 +472,14 @@
       "df[df.index.month==01]\n",
       "\n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
