updated project instructions and how to print list of deltas

--- a/notebooks/bonusgraphs.ipynb
+++ b/notebooks/bonusgraphs.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:160bde2161520641a6de19c7a9b5359a034a9f85a4aa42790492d238b2b48797"
+  "signature": "sha256:864b924138369f9db2ff666b18ca2853cf7e1708b8b8d2924d3ad6d99a7e8522"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -196,6 +196,26 @@
       }
      ],
      "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data['flood'].keys()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 16,
+       "text": [
+        "Index([u'Amazon', u'Amur', u'Ganges', u'Brahmani', u'Burdekin', u'Chao Phraya', u'Congo', u'Colorado', u'Danube', u'Dnieper', u'Ebro', u'Fly', u'Godavari', u'Grijalva', u'Han', u'Hong', u'Indus', u'Irrawaddy', u'Krishna', u'Lena', u'Limpopo', u'Mackenzie', u'Magdalena', u'Mahakam', u'Mahanadi', u'Mekong', u'Mississippi', u'Moulouya', u'Murray-Darling', u'Niger', u'Nile', u'Orange', u'Orinoco', u'Parana', u'Po', u'Rhine', u'Rhone', u'Rio Grande', u'Sao Francisco', u'Sebou', u'Senegal', u'Shatt-el-Arab', u'Tana', u'Tone', u'Vistula', u'Volta', u'Yangtze', u'Yellow', u'Yukon', u'Pearl', u'Zambezi', u'Volga'], dtype='object')"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
