--- a/notebooks/class4.ipynb
+++ b/notebooks/class4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4d74783d90c5db955db65e1d8b6058ad4fa07a187e0aa24556c54149a06ca527"
+  "signature": "sha256:dfa410789af509861a4c6d14331c04555dc9373e3a2aadda03009c1fae1ce65c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -455,8 +455,10 @@
       "4. Compute the (pairwise pearsonr) correlations between the deltas. \n",
       "5. Plot the deltas against each other (scatter plot) \n",
       "6. Compute and plot the best fit line (linear regression)\n",
-      "7. Pick any three rivers in the same region* (except ones already covered in class) and repeat steps 1-6\n",
-      "\n",
+      "7. Pick any three rivers in the same region(except ones already covered in class) and repeat steps 1-6\n",
+      "      * put finger anywhere on map\n",
+      "      * pick 3 rivers near finger\n",
+      "      \n",
       "Report\n",
       "=======\n",
       "Describe and compare any region level patterns and similarities between rivers in the same region and rivers across regions. Use the (Pearl, Yellow, Yangtze) and (Colorado, Mississippi) pairs, as well as the 3 rivers you chose.\n",
