scaled back project

--- a/notebooks/class4.ipynb
+++ b/notebooks/class4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:dfa410789af509861a4c6d14331c04555dc9373e3a2aadda03009c1fae1ce65c"
+  "signature": "sha256:7fe950cc67b1fd7ac47b0232bb9cccc8e9ab7080be950a267907117e91fd6556"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -448,14 +448,17 @@
       "========\n",
       "\n",
       "1. Plot the Colorado and Mississippi river deltas on a map\n",
-      "2. Color the points based on the average (mean) flood severity in the delta\n",
-      "3. Plot the river deltas' time series \n",
+      "2. Pick any ONE variable from the list:\n",
+      "        'ndvi', 'discharge', 'inundation', 'precip'\n",
+      "   This will be the sole variable used for all the analysis\n",
+      "3. Color the points based on the average (mean) of the chosen variable in the delta\n",
+      "4. Plot the river deltas' time series for that variable\n",
       "        a timeseries is just a plot of time vs. data\n",
       "        it's the df[var][river].plot()\n",
-      "4. Compute the (pairwise pearsonr) correlations between the deltas. \n",
-      "5. Plot the deltas against each other (scatter plot) \n",
-      "6. Compute and plot the best fit line (linear regression)\n",
-      "7. Pick any three rivers in the same region(except ones already covered in class) and repeat steps 1-6\n",
+      "5. Compute the (pairwise pearsonr) correlations between the deltas. \n",
+      "6. Plot the deltas against each other (scatter plot) \n",
+      "7. Compute and plot the best fit line (linear regression)\n",
+      "8. Pick any three rivers in the same region(except ones already covered in class) and repeat steps 1-6\n",
       "      * put finger anywhere on map\n",
       "      * pick 3 rivers near finger\n",
       "      \n",
